Add Applicant tests using DAO